--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,4 +5,6 @@
   --medium_pink: #FDACAC;
   --bg_pink: #FAE1DF;
   --lightest_pink: #FDF0EF;
+  --dark-medium-pink: #FAE1DF;
+  --darker_pink-glow: rgba(253, 121, 121, 0.5);
 }
