--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,5 +6,6 @@
   --bg_pink: #FAE1DF;
   --lightest_pink: #FDF0EF;
   --dark-medium-pink: #FAE1DF;
+  --dark-dark-pink: #FDD2D1;
   --darker_pink-glow: rgba(253, 121, 121, 0.5);
 }
